--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-flask
-flask-cors
-pandas
-scikit-learn
+Flask==3.0.0
+Flask-Cors==4.0.0
+gunicorn==21.2.0
+pandas==2.1.3
+numpy==1.26.2
+scikit-learn==1.3.2
+matplotlib==3.8.2
